crates/tui/snapshots/shared/issues/issue_browser_100x24.snap
---
source: crates/tui/src/issues_tests.rs
expression: text
---
─ Issues ───────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Open    Closed                                                                                   
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search keywords or #number                                                                   │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  team/repo · 0 selected · 2 loaded · Updated                                                       
> [ ] #3 first                                                                                      
  [ ] #5 second
