crates/tui/snapshots/shared/issues/issue_browser_20x12.snap
---
source: crates/tui/src/issues_tests.rs
expression: text
---
─ Issues ───────────
                    
   Open    Closed   
  ╭──────────────╮  
  │ Search keywor│  
  ╰──────────────╯  
  team/repo · 0 se  
> [ ] #3 first      
  [ ] #5 second
